Need to add jQuery for closing menu on option select

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
           $("nav ul").toggleClass("showing")
         })
       })
+
+      // Close menu when option is selected
         
       // Scrolling Effect
       $(window).on("scroll", () => {
