--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>React App</title>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Archivo Black" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Tenor Sans" />
