--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Archivo Black" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Tenor Sans" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open Sans" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto" />
   </head>
   <body>
     <noscript>
