Added resume in navbar. Added blue line under each section title

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript">
       // Menu toggle-button
       $(document).ready(() => {
-        $(".menu-icon").on("click", () => {
+        $(".menu-icon i").on("click", () => {
           $("nav ul").toggleClass("showing")
         })
 
